# rolling-quantiles

./: .gitignore  NOTICE  README.md
.github/workflows/: ci.yml  publish.yml  purge-cache.yml  purge-cache.yml.disabled
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
python/examples/: benchmark.py  illustration.py
python/rolling_quantiles/: __init__.py
python/tests/: input.py  pytest.ini  requirements.txt  test_guards.py  test_highpass.py  test_interpolation.py  test_lowpass.py
src/: filter.c  filter.h  heap.c  heap.h  python.c  quantile.c  quantile.h  test.c
