[metadata]
name = rolling_quantiles
version = 0.1.0
description = Composable and blazing fast rolling-quantile filters for streaming data and bulk batches.
license_files = ../LICENSE
url = https://github.com/marmarelis/rolling-quantiles
author = Myrl Marmarelis
author_email = myrl@marmarel.is

[options]
zip_safe = true
packages = find:
setup_requires =
install_requires = numpy
