[metadata]
name = rolling_quantiles
version = 0.1.1
description = Composable and blazing fast rolling-quantile filters for streaming data and bulk batches.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = numpy, filter, numeric, signal, streaming, scipy, quantiles, rolling, efficient, realtime
license_files = ../LICENSE
url = https://github.com/marmarelis/rolling-quantiles
author = Myrl Marmarelis
author_email = myrl@marmarel.is

[options]
zip_safe = true
packages = find:
setup_requires =
install_requires = numpy
python_requires = >=3.7
