[metadata]
name = rolling_quantiles
version = attr: rolling_quantiles.__version__
description = Composable and blazing fast rolling-quantile filters for streaming data and bulk batches.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = numpy, filter, numeric, signal, streaming, scipy, quantiles, rolling, efficient, realtime
license_files = ../LICENSE
url = https://github.com/marmarelis/rolling-quantiles
author = Myrl Marmarelis
author_email = myrl@marmarel.is

[options]
zip_safe = true
packages = find:
setup_requires = numpy ~= 1.20
install_requires = numpy ~= 1.20
python_requires = >=3.7
